--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -28,6 +28,7 @@
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
               <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
+              <a class="nav-item nav-link" href="{{ url_for('post_list') }}">Posts List</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
